# deadline24

./: .gitignore  A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  build.sh  run_crossword_all.sh  run_task.sh  run_template_all.sh  template.cpp  tmp.cpp
C_Crossword/: crossword00.in  crossword00.out  crossword01.in  crossword01.out  crossword02.in  crossword02.out  crossword03.in  crossword03.out  crossword04.in  crossword04.out  crossword05.in  crossword05.out  crossword06.in  crossword06.out  crossword07.in  crossword07.out  crossword08.in  crossword08.out  crossword09.in  crossword09.out  crossword10.in  crossword10.out  dict1.in  dict2.in  dict3.in  dict4.in  dict5.in
template/: template00.in  template00.out  template01.in  template01.out
